; ModuleID = '/home/carl/AnghaBench/i3/i3-nagbar/extr_main.c_start_application.c'
source_filename = "/home/carl/AnghaBench/i3/i3-nagbar/extr_main.c_start_application.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"executing: %s\0A\00", align 1
@_PATH_BSHELL = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [3 x i8] c"-c\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @start_application to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @start_application(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = call i32 @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i8* %3)
  %5 = call i64 (...) @fork()
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %18

7:                                                ; preds = %1
  %8 = call i32 (...) @setsid()
  %9 = call i64 (...) @fork()
  %10 = icmp eq i64 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %7
  %12 = load i32, i32* @_PATH_BSHELL, align 4
  %13 = load i32, i32* @_PATH_BSHELL, align 4
  %14 = load i8*, i8** %2, align 8
  %15 = call i32 @execl(i32 %12, i32 %13, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i8* %14, i32* null)
  br label %16

16:                                               ; preds = %11, %7
  %17 = call i32 @exit(i32 0) #3
  unreachable

18:                                               ; preds = %1
  %19 = call i32 @wait(i32 0)
  ret void
}

declare dso_local i32 @printf(i8*, i8*) #1

declare dso_local i64 @fork(...) #1

declare dso_local i32 @setsid(...) #1

declare dso_local i32 @execl(i32, i32, i8*, i8*, i32*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @wait(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
